--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -91,4 +91,29 @@ body {
   .hover\:bg-gray-100:hover {
     @apply dark:hover:bg-gray-700;
   }
+
+  /* For Webkit browsers (Chrome, Safari, etc.) */
+  ::-webkit-scrollbar {
+    width: 6px;
+  }
+
+  ::-webkit-scrollbar-track {
+    background: transparent;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: rgba(22, 163, 74, 0.3);
+    border-radius: 20px;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: rgba(22, 163, 74, 0.5);
+  }
+
+  /* For Firefox */
+  * {
+    scrollbar-width: thin;
+    scrollbar-color: rgba(22, 163, 74, 0.3) transparent;
+  }
+
 }
